--- a/src/main/resources/templates/user/login_new.html
+++ b/src/main/resources/templates/user/login_new.html
@@ -90,7 +90,7 @@
 		</form>
 		
 		<div class="text-center" style="margin-top: 30px; padding-top: 20px; border-top: 1px solid #E9ECEF;">
-			<a href="/" style="color: #667eea; font-weight: 600;">
+			<a href="/eBusiness" style="color: #667eea; font-weight: 600;">
 				← 返回首页
 			</a>
 		</div>
