--- a/src/main/resources/templates/user/cart.html
+++ b/src/main/resources/templates/user/cart.html
@@ -9,23 +9,56 @@
 <link rel="stylesheet" href="css/custom.css" />
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/common.js"></script>
 <script type="text/javascript">
 	function deleteCart(obj){
-		if(window.confirm("确认删除该商品吗？")){
-			//获取路径
-			var pathName=window.document.location.pathname;
-			//截取，得到项目名称
-			var projectName=pathName.substring(0,pathName.substr(1).indexOf('/')+1);
-			window.location.href = projectName + "/cart/deleteCart?gid=" +  obj;
+		if (typeof window.showConfirm === 'function') {
+			// 使用Element Plus风格的确认对话框
+			window.showConfirm(
+				'确认删除该商品吗？',
+				'删除后无法恢复，请谨慎操作',
+				function() {
+					//获取路径
+					var pathName=window.document.location.pathname;
+					//截取，得到项目名称
+					var projectName=pathName.substring(0,pathName.substr(1).indexOf('/')+1);
+					window.location.href = projectName + "/cart/deleteCart?gid=" + obj;
+				}
+			);
+		} else {
+			// 降级处理：使用原生确认对话框
+			if(window.confirm("确认删除该商品吗？")){
+				//获取路径
+				var pathName=window.document.location.pathname;
+				//截取，得到项目名称
+				var projectName=pathName.substring(0,pathName.substr(1).indexOf('/')+1);
+				window.location.href = projectName + "/cart/deleteCart?gid=" +  obj;
+			}
 		}
 	}
 	function clearCart(){
-		if(window.confirm("确认清空购物车吗？此操作不可恢复！")){
-			//获取路径
-			var pathName=window.document.location.pathname;
-			//截取，得到项目名称
-			var projectName=pathName.substring(0,pathName.substr(1).indexOf('/')+1);
-			window.location.href = projectName + "/cart/clearCart";
+		if (typeof window.showConfirm === 'function') {
+			// 使用Element Plus风格的确认对话框
+			window.showConfirm(
+				'确认清空购物车吗？',
+				'此操作不可恢复，将删除购物车中的所有商品！',
+				function() {
+					//获取路径
+					var pathName=window.document.location.pathname;
+					//截取，得到项目名称
+					var projectName=pathName.substring(0,pathName.substr(1).indexOf('/')+1);
+					window.location.href = projectName + "/cart/clearCart";
+				}
+			);
+		} else {
+			// 降级处理：使用原生确认对话框
+			if(window.confirm("确认清空购物车吗？此操作不可恢复！")){
+				//获取路径
+				var pathName=window.document.location.pathname;
+				//截取，得到项目名称
+				var projectName=pathName.substring(0,pathName.substr(1).indexOf('/')+1);
+				window.location.href = projectName + "/cart/clearCart";
+			}
 		}
 	}
 </script>
