--- a/src/main/resources/templates/user/header.html
+++ b/src/main/resources/templates/user/header.html
@@ -10,6 +10,7 @@
 <link href="css/custom.css" rel="stylesheet">
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/common.js"></script>
 </head>
 <body>
 	<!-- 顶部导航栏 -->
@@ -54,10 +55,49 @@
 							<li><a href="#">💬 投诉建议</a></li>
 						</ul>
 					</li>
+					<li th:if="${session.bUser} != null">
+						<a href="javascript:void(0)" onclick="confirmLogout()">
+							🚪 退出登录
+						</a>
+					</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
+	
+	<script>
+	function confirmLogout() {
+		// 暂时使用原生confirm来确保功能能正常工作
+		if (confirm('确定要退出登录吗？退出后需要重新登录才能使用相关功能。')) {
+			performLogout();
+		}
+		
+		// 后续可以恢复Element Plus风格的对话框
+		/*
+		if (typeof window.showConfirm === 'function') {
+			// 使用Element Plus风格的确认对话框
+			window.showConfirm(
+				'确定要退出登录吗？',
+				'退出后需要重新登录才能使用相关功能',
+				function() {
+					// 确认退出
+					performLogout();
+				}
+			);
+		} else {
+			// 降级处理：使用原生确认对话框
+			if (confirm('确定要退出登录吗？')) {
+				performLogout();
+			}
+		}
+		*/
+	}
+	
+	function performLogout() {
+		// 直接跳转到我们自定义的logout方法
+		window.location.href = 'user/userLogout';
+	}
+	</script>
 	
 	<!-- 商品分类导航栏 -->
 	<nav class="navbar navbar-categories navbar-fixed-top" role="navigation" style="top: 50px;">
