--- a/src/main/resources/templates/admin/header.html
+++ b/src/main/resources/templates/admin/header.html
@@ -76,6 +76,13 @@
 				</li>
 				
 				<li class="sidebar-menu-item">
+					<a th:href="@{/statistics/cacheManagement}" class="sidebar-menu-link">
+						<span class="sidebar-menu-icon">🚀</span>
+						<span class="sidebar-menu-text">缓存管理</span>
+					</a>
+				</li>
+				
+				<li class="sidebar-menu-item">
 					<a href="javascript:void(0)" class="sidebar-menu-link">
 						<span class="sidebar-menu-icon">⚙️</span>
 						<span class="sidebar-menu-text">系统管理</span>
