--- a/src/main/resources/templates/user/goodsDetail.html
+++ b/src/main/resources/templates/user/goodsDetail.html
@@ -56,7 +56,7 @@
 	<div class="container" style="margin-top: 30px; margin-bottom: 60px;">
 		<!-- 面包屑导航 -->
 		<ol class="breadcrumb breadcrumb-custom">
-			<li><a href="/">首页</a></li>
+			<li><a href="/eBusiness">首页</a></li>
 			<li><a href="#" th:text="${goods.typename}">分类</a></li>
 			<li class="active" th:text="${goods.gname}">商品详情</li>
 		</ol>
